--- a/admin/css/theme.css
+++ b/admin/css/theme.css
@@ -101,7 +101,7 @@ p {
 
 /*====== Login page===== */
 .bg-back {
-    background-image: url(../images/lion.jpg);
+    background-image: url(../images/media.jpg);
 }
 
 .logo1 {
